--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "isbot": "^5.1.17",
     "lucide-react": "^0.487.0",
     "luxon": "^3.6.1",
+    "motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
