feat: 네비게이션바 구현

--- a/components.json
+++ b/components.json
@@ -13,7 +13,7 @@
   "aliases": {
     "components": "app/common/components",
     "utils": "~/lib/utils",
-    "ui": "~/app/common/components/ui",
+    "ui": "app/common/components/ui",
     "lib": "~/lib",
     "hooks": "~/hooks"
   },
