--- a/package.json
+++ b/package.json
@@ -6,25 +6,51 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:typegen": "supabase gen types typescript --project-id ogpmcsokllkrbndtuvqs > database.types.ts",
+    "deploy": "npm run build && wrangler deploy"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@types/luxon": "^3.6.2",
+    "@types/nprogress": "^0.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.41.0",
+    "i18next": "^25.1.2",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-fetch-backend": "^6.0.0",
+    "i18next-fs-backend": "^2.6.0",
+    "i18next-http-backend": "^3.0.2",
     "isbot": "^5.1.17",
     "lucide-react": "^0.487.0",
     "luxon": "^3.6.1",
     "motion": "^12.6.3",
+    "nprogress": "^0.2.0",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
     "react-router": "^7.5.0",
+    "remix-i18next": "^7.2.1",
+    "remix-themes": "^2.0.4",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
+    "type-fest": "^4.39.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -33,6 +59,7 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "drizzle-kit": "^0.30.6",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
